Registrar Shutdown window: Make Font Size sensitive * Removed the WordWrap from the text view, until we computed the TextHeight(), then put it again, once the textview got resized.

I think it might be hiding an other bug in the way we compute TextHeight(), but it seems to be a workaround.

(Fixing?) Ticket #169


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32501 a95241bf-73f2-0310-859d-f6bbb57e9c96